--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
        - master
-       - test-actions
+       - datastore-split
   pull_request:
     branches: [ master ]
 
